--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,29 @@ header img {
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
+#nav_menu{
+	border-bottom: 3px solid #800000;
+	background-color: #800000;
+}
+#nav_menu ul{
+	list-style-type: none;
+	display: flex;
+}
+#nav_menu li{
+	width: 20%;
+}
+#nav_menu a{
+	text-align: center;
+	display: block;
+	padding: .7em 0;
+	background-color: #800000;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
+}
+#nav_menu a:hover{
+	color: yellow;
+}
 main {
 	display: flex;
 	flex-direction: row-reverse;
